Mobile menu UI: Prevented overlapping on horizontal mobile devices.

--- a/app/scss/modules/_mobile-menu.scss
+++ b/app/scss/modules/_mobile-menu.scss
@@ -3,6 +3,7 @@
 	position: fixed;
 	width: 100%;
 	height: 100%;
+	min-height: 500px;
 	padding-top: 60px;
 	background-color: $dark-bg-color;
 	@include flexIt;
@@ -63,6 +64,7 @@
 	}
 
 	.pages-wrap{
+		z-index: 1;
 		position: relative;
 		width: 100%;
 
@@ -87,7 +89,7 @@
 
 		.cols-wrap{
 			padding-top: 30px;
-			padding-bottom: 42px;
+			padding-bottom: 20px;
 		}
 
 		.nav-col{
